# parallel-programming

./: .gitignore  CMakeLists.txt  README.md  main.cc  openmp.cc  requirements.txt  start.pbs  statistic.py  statistic2.py
Lab3/: CMakeLists.txt  mpi.cc  mpi_super.cc  start.pbs  statistic.py  statistic_sc.py
Lab3/result/: statistic.csv
Lab3/result/100/: A.txt  B.txt  result.txt
Lab3/result/1000/: A.txt  B.txt
Lab3/result/200/: A.txt  B.txt  result.txt
Lab3/result/300/: A.txt  B.txt  result.txt
Lab3/result/400/: A.txt  B.txt  result.txt
Lab3/result/500/: A.txt  B.txt  result.txt
compare_results/: compare_result.txt  compare_result2.txt
include/: file_manager.h  matrix.h  random_generator.h  stat.h
reports/: report1.docx  report2.docx
result/: statistic.txt
result/100/: A.txt  B.txt  result.txt
result/1000/: A.txt  B.txt
result/200/: A.txt  B.txt  result.txt
result/300/: A.txt  B.txt  result.txt
result/400/: A.txt  B.txt  result.txt
result/500/: A.txt  B.txt  result.txt
result_for_lab2/: statistic.csv
result_for_lab2/100/: A.txt  B.txt  result.txt
result_for_lab2/1000/: A.txt  B.txt
result_for_lab2/200/: A.txt  B.txt  result.txt
result_for_lab2/300/: A.txt  B.txt  result.txt
result_for_lab2/400/: A.txt  B.txt  result.txt
result_for_lab2/500/: A.txt  B.txt  result.txt
src/: file_manager.cc  matrix.cc  random_generator.cc  stat.cc
